--- a/prometheus-grafana/docker-compose.yml
+++ b/prometheus-grafana/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3'
+
 services:
   prometheus:
     image: prom/prometheus
@@ -6,7 +7,7 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - ./prometheus:/etc/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml  # Correct path for prometheus config
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     restart: always
@@ -22,9 +23,8 @@ services:
       - prometheus
     restart: always
     volumes:
-      - ./grafana/provisioning/datasources/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/dashboards:/etc/grafana/dashboards
+      - ./grafana/provisioning/datasources/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml  # Correct volume for datasources
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards  # Correct volume for dashboards
     networks:
       - monitoring
 
