--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -1,12 +1,21 @@
 global:
   scrape_interval: 10s
+
 scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'jenkins'
+    static_configs:
+      - targets: ['localhost:8080']
+    metrics_path: '/prometheus'
 
 alerting:
   alertmanagers:
     - static_configs:
         - targets:
             - 'alertmanager:9093'
+
+rule_files:
+  - "/etc/prometheus/alert_rules.yml"
