--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
   - job_name: 'jenkins'
     metrics_path: '/prometheus'
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['prometheus:8080']
 
 alerting:
   alertmanagers:
