--- a/prometheus-grafana/prometheus/alert_rules.yml
+++ b/prometheus-grafana/prometheus/alert_rules.yml
@@ -32,7 +32,8 @@ groups:
   - name: node-exporter-alerts
     rules:
       - alert: HighCPUUsage
-        expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100) > 90
+        expr:
+          100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100) > 90
         for: 1m
         labels:
           severity: warning
