--- a/prometheus-grafana/prometheus/alert_rules.yml
+++ b/prometheus-grafana/prometheus/alert_rules.yml
@@ -31,12 +31,11 @@ groups:
 
   - name: node-exporter-alerts
     rules:
-      - alert: HighCPUUsage
-        expr: >
-          100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100) > 90
+      - alert: HighCPU
+        expr: 100 - avg(rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100 > 90
         for: 1m
         labels:
           severity: warning
         annotations:
-          summary: "High CPU usage on {{ $labels.instance }}"
-          description: "CPU usage is above 90% for more than 1 minute."
+          summary: "High CPU on {{ $labels.instance }}"
+          description: "CPU > 90% for 1 min."
